feat: completed slideshow with animations. added animation for price. fixed addtocart animation.

--- a/src/app/products/_components/product-card.module.scss
+++ b/src/app/products/_components/product-card.module.scss
@@ -56,7 +56,9 @@
 
 .priceLineThrough {
   font-size: 14px;
-  text-decoration: line-through;
+  position: relative;
+  overflow: hidden;
+  color: var(--gray);
 }
 .price,
 .priceLineThrough {
