--- a/src/app/products/[id]/_components/price-with-discount.module.scss
+++ b/src/app/products/[id]/_components/price-with-discount.module.scss
@@ -11,3 +11,17 @@
     color: var(--gray);
   }
 }
+.priceDiscount {
+  position: absolute;
+  width: 40px;
+  height: 20px;
+  background-color: var(--primary);
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  right: -50px;
+  font-size: 14px;
+  color: #000;
+}
