refactor: prettier format

--- a/src/app/products/_components/product-card.module.scss
+++ b/src/app/products/_components/product-card.module.scss
@@ -9,7 +9,9 @@
   gap: 4px;
 
   border-radius: 0.5rem;
-  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow:
+    0 2px 8px 0 rgba(0, 0, 0, 0.2),
+    0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .discountContainer {
