fix & refactor: minor fixes and code refactor

--- a/src/app/products/_components/product-card.module.scss
+++ b/src/app/products/_components/product-card.module.scss
@@ -61,9 +61,9 @@
   position: relative;
   overflow: hidden;
   color: var(--gray);
+  text-align: left;
 }
-.price,
-.priceLineThrough {
+.price {
   text-align: left;
   & span {
     color: var(--gray);
