--- a/src/app/products/[id]/_components/price-with-discount.module.scss
+++ b/src/app/products/[id]/_components/price-with-discount.module.scss
@@ -3,9 +3,9 @@
   position: relative;
   overflow: hidden;
   color: var(--gray);
+  text-align: left;
 }
-.price,
-.priceLineThrough {
+.price {
   text-align: left;
   & span {
     color: var(--gray);
