--- a/src/app/products/[id]/_components/product-details.module.scss
+++ b/src/app/products/[id]/_components/product-details.module.scss
@@ -71,3 +71,45 @@
   font-size: 10;
   text-align: center;
 }
+
+.btnContainer {
+  position: fixed;
+  bottom: 16px;
+  left: 50%;
+  translate: -50% 0;
+  width: 500;
+  padding: 0 16px;
+
+  display: flex;
+  gap: 12px;
+  overflow: hidden;
+}
+
+.completeBuyBtn {
+  width: 100%;
+  padding: 4px !important;
+  font-weight: 700;
+}
+
+.itemCount {
+  border-radius: 100%;
+  width: 22px;
+  height: 22px;
+  background-color: #000;
+  display: inline-block;
+  margin-left: 4px;
+}
+
+.menuBtnOUtline {
+  width: 150px;
+  font-size: 12px;
+  color: var(--primary) !important;
+  background-color: var(--background) !important;
+  font-weight: 700;
+}
+
+.menuBtn {
+  width: 100%;
+  font-size: 12px;
+  font-weight: 700;
+}
