--- a/src/app/products/_components/button.module.scss
+++ b/src/app/products/_components/button.module.scss
@@ -1,10 +1,9 @@
 .container {
   border-radius: 10px;
-  width: 57px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 14px;
   max-width: 500px;
 
   border: 1px solid var(--primary);
