--- a/src/app/products/[id]/_components/product-details.module.scss
+++ b/src/app/products/[id]/_components/product-details.module.scss
@@ -77,7 +77,7 @@
   bottom: 16px;
   left: 50%;
   translate: -50% 0;
-  width: 100vw;
+  width: min(500px, 100vw);
   padding: 0 16px;
 
   display: flex;
