--- a/src/app/products/[id]/_components/product-details.module.scss
+++ b/src/app/products/[id]/_components/product-details.module.scss
@@ -15,8 +15,8 @@
   border: 1px solid #ffffff50;
   z-index: 10;
 
-  top: 30px;
-  left: 30px;
+  top: 25px;
+  left: 25px;
 
   &:hover {
     background-color: #80808080;
@@ -35,20 +35,20 @@
   margin-bottom: 5rem;
 }
 
-.priceDiscount {
-  position: absolute;
-  width: 40px;
-  height: 20px;
-  background-color: var(--primary);
-  border-radius: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  right: -50px;
-  font-size: 14px;
-  color: #000;
-}
+// .priceDiscount {
+//   position: absolute;
+//   width: 40px;
+//   height: 20px;
+//   background-color: var(--primary);
+//   border-radius: 30px;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   top: 0;
+//   // right: -100px !important;
+//   font-size: 14px;
+//   color: #000;
+// }
 
 .discountContainer {
   position: absolute;
